# -web

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  项目说明.md
.claude/: launch.json
agent/: README.md  config.example.yaml  install.sh  signin_agent.py
backend/: .dockerignore  Dockerfile  README.md  _run_alembic.py  alembic.ini  pyproject.toml  sandbox_runner.py
backend/alembic/: env.py
backend/alembic/versions/: 0002_add_nodes_table.py  0003_nodes_pending_actions.py  f9dfb20755b4_initial_schema.py
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/v1/: __init__.py  agent.py  auth.py  dashboard.py  instances.py  nodes.py  notifications.py  runs.py  script_upload.py  scripts.py  settings.py
backend/app/core/: __init__.py  crypto.py  exceptions.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  pragma.py  session.py
backend/app/db/models/: __init__.py  instance.py  node.py  notification.py  run.py  script.py  session.py  setting.py  user.py
backend/app/middleware/: __init__.py  agent_auth.py  auth.py  csrf.py  error_handler.py  request_log.py
backend/app/notifications/: __init__.py  apprise_client.py  dispatcher.py  templates.py
backend/app/plugins/: __init__.py  fields.py  loader.py  manifest.py  scanner.py
backend/app/runner/: __init__.py  log_broker.py  sandbox.py  stdio_protocol.py
backend/app/scheduler/: __init__.py  concurrency.py  engine.py  executor.py  retry.py
backend/app/schemas/: __init__.py  auth.py  dashboard.py  instance.py  node.py  notification.py  run.py  script.py  script_upload.py  setting.py
backend/app/services/: __init__.py  auth_service.py  dashboard_service.py  instance_service.py  node_service.py  notification_service.py  run_service.py  script_service.py  script_upload_service.py  settings_service.py
backend/app/tasks/: __init__.py  cleanup_runs.py  housekeeping.py  node_health.py  resume_paused.py  scan_scripts.py
backend/app/utils/: __init__.py  ids.py  shell.py  time.py
backend/tests/: conftest.py
deploy/: nginx-jb.aijiaxia.cc.conf
docs/: SCRIPT-FIELDS-REFERENCE.md
frontend/: .env.example  .gitignore  Dockerfile  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/public/: .gitkeep
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
scripts/coklw/: README.md  main.py  manifest.yaml
scripts/jmcomic/: .gitignore  README.md  main.py  manifest.yaml  requirements.txt
scripts/ptfans/: README.md  main.py  (+1 more)
进度/: README.md  决策.md
(+122 files in other folders)
