[project]
name = "checkin-panel-backend"
version = "0.1.0"
description = "签到脚本聚合管理面板 — 后端 (FastAPI + APScheduler + SQLite)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "yunkelai", email = "yunkelai12251@gmail.com" }]

dependencies = [
    # ===== Web 框架 =====
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",      # uvloop + httptools
    "python-multipart>=0.0.9,<1.0",      # 文件上传(备份导入)

    # ===== 数据 =====
    "sqlalchemy>=2.0.30,<3.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",

    # ===== 调度 =====
    # APScheduler 3.x 是稳定生产版;4.x 仍 alpha,绝不上
    "apscheduler>=3.10,<4.0",

    # ===== 安全 =====
    "bcrypt>=4.1,<5.0",
    "cryptography>=42.0,<46.0",          # Fernet 来自这里

    # ===== 通知 =====
    "apprise>=1.8,<2.0",                 # 80+ 渠道一统

    # ===== YAML / 模板 =====
    "pyyaml>=6.0,<7.0",
    "jinja2>=3.1,<4.0",

    # ===== 时区(Windows 必需,Linux 可选)=====
    "tzdata>=2024.1",

    # ===== 日志 =====
    "loguru>=0.7,<1.0",

    # ===== SSE =====
    "sse-starlette>=2.1,<4.0",

    # ===== 其他 =====
    "httpx>=0.27,<1.0",
    "anyio>=4.4,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "types-pyyaml",
    "freezegun>=1.5,<2.0",               # 测试时冻结时间
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ===== Ruff(linter + formatter)=====
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle / pyflakes
    "I",                 # isort
    "B",                 # bugbear
    "C4",                # comprehensions
    "UP",                # pyupgrade
    "SIM",               # simplify
    "RUF",               # ruff-specific
]
ignore = [
    "E501",              # line-too-long (formatter 已处理)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ===== mypy =====
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["apscheduler.*", "apprise.*"]
ignore_missing_imports = true

# ===== pytest =====
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"
